# cgreen_asdawfsa

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: coordinate.c  coordinate.h  main.c  matrix.c  matrix.h  rotate.c  rotate.h  segmentSize.c  segmentSize.h  star.c  star.h
test/: CMakeLists.txt  cgreen_test.c  test.c
